# spec_driven_development

blog_post_manager_app/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  K8S_SUCCESS.md  KUBERNETES_SETUP.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  SPECKIT_COMMANDS.md  SPECKIT_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
blog_post_manager_app/.github/: dependabot.yml
blog_post_manager_app/.github/workflows/: README.md  build.yml  codeql.yml  deploy.yml  release.yml  test.yml
blog_post_manager_app/.specify/memory/: constitution.md
blog_post_manager_app/alembic/: env.py
blog_post_manager_app/alembic/versions/: 877a5d043661_add_triggers_for_search_vector_updated_.py  9cecac277d47_create_users_posts_tags_and_post_tags_.py
blog_post_manager_app/k8s/: QUICKSTART.md  README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml.example  service.yaml  servicemonitor.yaml
blog_post_manager_app/src/: __init__.py  config.py  database.py  main.py
blog_post_manager_app/src/api/: deps.py
blog_post_manager_app/src/api/v1/: auth.py  (+3 more)
blog_post_manager_app/src/middleware/: __init__.py  correlation_id.py  error_handler.py
blog_post_manager_app/src/models/: __init__.py  post.py  tag.py  user.py
blog_post_manager_app/src/schemas/: __init__.py  auth.py  common.py  post.py  tag.py  user.py
blog_post_manager_app/src/services/: __init__.py  auth_service.py  post_service.py  search_service.py
blog_post_manager_app/src/utils/: __init__.py  logging.py  security.py
blog_post_manager_app/tests/: README.md  __init__.py  conftest.py
blog_post_manager_app/tests/contract/: __init__.py  test_openapi_compliance.py
(+276 files in other folders)
